--- a/AULA02/alert.html
+++ b/AULA02/alert.html
@@ -5,4 +5,5 @@
         <title>Exemplo JavaScript ALERT</title>
     </head>
     <body onLoad="alert('Bem Vindo ao Site')">
-</body></html>
+</body>
+</html>
