--- a/AULA01/Desafio.html
+++ b/AULA01/Desafio.html
@@ -29,7 +29,7 @@
         }
     </style>
 
-    <script type="text/javascript" src="desafio1.js" async></script>
+    <script type="text/javascript" src="desafio.js" async></script>
 
 </head>
 
