--- a/AULA01/Desafio.html
+++ b/AULA01/Desafio.html
@@ -6,30 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="./style.css">
+
     <title>Jogo Adivinhe o Número</title>
 
-    <style>
-        html 
-        {
-            font-family: sans-serif;
-        }
-
-        body 
-        {
-            width: 50%;
-            max-width: 800px;
-            min-width: 480px;
-            margin: 0 auto;
-        }
-
-        .ultimoResultado 
-        {
-            color: white;
-            padding: 3px;
-        }
-    </style>
-
-    <script type="text/javascript" src="desafio.js" async></script>
+    <script type="text/javascript" src="script.js" async></script>
 
 </head>
 
