--- a/AULA02/EX2_Relogio/EXERC2.html
+++ b/AULA02/EX2_Relogio/EXERC2.html
@@ -2,17 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./style.css">
+
         <title>Hora Atual/segundos</title>
-    </head>
+    
+
     <body onload="startTime()">
         <p id="relogio"></p>
         <script>
-        function startTime() {
-            const date = new Date();
-            document.getElementById("relogio").innerHTML = date.toLocaleTimeString();
-            setTimeout(function() {startTime()}, 
-            1000);
-        }
+            function startTime() {
+                const date = new Date();
+                document.getElementById("relogio").innerHTML = date.toLocaleTimeString();
+                setTimeout(function() {startTime()}, 
+                1000);
+            }
         </script>
+    </head>
     </body>
 </html>
