--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>Laboratório de Engenharia de Software</title>
+    <style>
+        body {
+            background-color: rgb(187, 241, 241);
+        }
+        div.cabecalho {
+            text-align: center;
+            font-family: arial;
+            line-height: 1em;
+            border: 1px solid black;
+            background-color: whitesmoke;
+        }
+        div.links {
+            font-family: arial;
+            list-style-type: circle;
+            border: 1px solid black;
+            line-height: 1em;
+            background-color: whitesmoke;
+        }
+        p{
+            text-align: center;
+            font-family: arial;
+            font-size: 18px;
+            font-weight: bold;
+        }
+    </style>
 </head>
-<body>
-    
+<body class="container">
+    <div class="cabecalho">
+        <h1>Giovanna Yumi</h1>
+    </div>
+    <br/>
+    <div class="links">
+        <p>Atividades e Desafios</p>
+        <ul>
+            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA01/Desafio.html" target="_blank">Desafio 1 - Jogo adivinhe o número</a></li>
+            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA02/EX1_DataAtual/EXERC1.html" target="_blank">Aula 02 - Exeercicio data atual</a></li>
+            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA02/EX2_Relogio/EXERC2.html" target="_blank">Aula 02 - Exercicio hora  e segundo atual</a></li>
+            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA03/Palindromo.html"target="_blank">Aula 03 - Exercicio Palindromo</a></li>
+    </div>
 </body>
 </html>
