--- a/index.html
+++ b/index.html
@@ -2,32 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css">
     <title>Laboratório de Engenharia de Software</title>
-    <style>
-        body {
-            background-color: rgb(187, 241, 241);
-        }
-        div.cabecalho {
-            text-align: center;
-            font-family: arial;
-            line-height: 1em;
-            border: 1px solid black;
-            background-color: whitesmoke;
-        }
-        div.links {
-            font-family: arial;
-            list-style-type: circle;
-            border: 1px solid black;
-            line-height: 1em;
-            background-color: whitesmoke;
-        }
-        p{
-            text-align: center;
-            font-family: arial;
-            font-size: 18px;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body class="container">
     <div class="cabecalho">
@@ -35,10 +11,10 @@
     </div>
     <br/>
     <div class="links">
-        <p>Atividades e Desafios</p>
+        <p>Atividades e Desafios Laboratório de Engenharia de Software</p>
         <ul>
-            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA01/Desafio.html" target="_blank">Desafio 1 - Jogo adivinhe o número</a></li>
-            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA02/EX1_DataAtual/EXERC1.html" target="_blank">Aula 02 - Exeercicio data atual</a></li>
+            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA01/Desafio.html" target="_blank">Aula 01 - Jogo adivinhe o número</a></li>
+            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA02/EX1_DataAtual/EXERC1.html" target="_blank">Aula 02 - Exercicio data atual</a></li>
             <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA02/EX2_Relogio/EXERC2.html" target="_blank">Aula 02 - Exercicio hora  e segundo atual</a></li>
             <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA03/Palindromo.html"target="_blank">Aula 03 - Exercicio Palindromo</a></li>
     </div>
