--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            background-color: rgb(199, 157, 195);
+            font-family: arial;
+            font-size: 30px;
+            text-align: center;
+            color:rgb(126, 255, 212);
+    
+        }
+        .cabecalho {
+            text-align: center;
+            font-family: arial;
+            font-size: 50px;
+            margin-top: 5%;
+        }
+        .links{
+            text-align: justify;
+            font-family: arial;
+            font-size: 25px;
+            font-weight: bold;
+        }
+        
+    </style>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./style.css">
     <title>Laboratório de Engenharia de Software</title>
 </head>
 <body class="container">
@@ -10,13 +32,13 @@
         <h1>Giovanna Yumi</h1>
     </div>
     <br/>
+    <p>Atividades e Desafios Laboratório de Engenharia de Software</p>
     <div class="links">
-        <p>Atividades e Desafios Laboratório de Engenharia de Software</p>
         <ul>
-            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA01/Desafio.html" target="_blank">Aula 01 - Jogo adivinhe o número</a></li>
-            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA02/EX1_DataAtual/EXERC1.html" target="_blank">Aula 02 - Exercicio data atual</a></li>
-            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA02/EX2_Relogio/EXERC2.html" target="_blank">Aula 02 - Exercicio hora  e segundo atual</a></li>
-            <li><a href="https://github.com/giovannayumii/LabEngSoftware/blob/main/AULA03/Palindromo.html"target="_blank">Aula 03 - Exercicio Palindromo</a></li>
+            <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA01/Desafio.html" target="_blank" target="_blank">Aula 01 - Jogo adivinhe o número</a></li>
+            <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA02/EX1_DataAtual/EXERC1.html" target="_blank" target="_blank">Aula 02 - Exercicio data atual</a></li>
+            <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA02/EX2_Relogio/EXERC2.html" target="_blank" target="_blank">Aula 02 - Exercicio hora  e segundo atual</a></li>
+            <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA03/Palindromo.html" target="_blank" target="_blank">Aula 03 - Exercicio Palindromo</a></li>
     </div>
 </body>
 </html>
