--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
             margin-top: 5%;
         }
         .links{
-            text-align: justify;
+            text-align: center;
             font-family: arial;
             font-size: 25px;
             font-weight: bold;
+
+        }
+        ul{
+            color: rgb(199, 157, 195);
         }
         
     </style>
