--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA02/EX1_DataAtual/EXERC1.html" target="_blank" target="_blank">Aula 02 - Exercicio data atual</a></li>
             <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA02/EX2_Relogio/EXERC2.html" target="_blank" target="_blank">Aula 02 - Exercicio hora  e segundo atual</a></li>
             <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA03/Palindromo.html" target="_blank" target="_blank">Aula 03 - Exercicio Palindromo</a></li>
+            <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA05/letreiro.html" target="_blank" target="_blank">Aula 05 - Exercicio Letreiro</a></li>
     </div>
 </body>
 </html>
