--- a/AULA05/letreiro.html
+++ b/AULA05/letreiro.html
@@ -10,20 +10,16 @@
     <style>
         body {
             font-family: arial;
-            font-size: 30px;
+            font-size: 50px;
             text-align: center;
-        }
-        .cabecalho {
-            text-align: center;
-            font-family: arial;
-            font-size: 60px;
+            margin-top: 15%;
+            
         }
         h1{
             color: red;
             text-align: center;
-            font-family: arial;
-            font-size: 50px;
-            font-weight: 600;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 100px;
         }
 
  
@@ -32,7 +28,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <h2>Venha estudar na <h1> F  A  T  E  C</h1></h2>
+    <h2>VENHA  ESTUDAR  NA <h1> F   A   T   E   C</h1></h2>
 
     <script type="text/babel">
         function typeWrite(element){
