--- a/AULA05/letreiro.html
+++ b/AULA05/letreiro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Atividade React</title>
+    <title>Exercicio Letreiro</title>
     <meta charset="UTF-8">
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
