--- a/AULA04/vestibular.html
+++ b/AULA04/vestibular.html
@@ -14,7 +14,7 @@
             left: 18%;
         }
         h1{
-            color: red;
+            color: black;
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 50px;
@@ -34,6 +34,13 @@
 <body>
 
     <h1> FATEC PRESIDENTE PRUDENTES-SP</h1>
+
+    <H1>EXAME</H1>
+    <H1>10/01/2023</H1>
+
+    <H1>Inscrições: 25/10/2022 à 29/12/2022</H1>
+    <H1>10/01/2023</H1>
+    <p>(até as 15 horas)</p>
 
     <h2>Classificação em Processo Seletivo – Vestibular. 
         É realizado em uma única fase, com provas das disciplinas do núcleo comum do ensino médio ou equivalente, 
