--- a/AULA04/vestibular.html
+++ b/AULA04/vestibular.html
@@ -35,11 +35,11 @@
 
     <h1> FATEC PRESIDENTE PRUDENTES-SP</h1>
 
-    <H1>EXAME</H1>
-    <H1>10/01/2023</H1>
+    <h4>EXAME</h4>
+    <h4>10/01/2023</h4>
 
-    <H1>Inscrições: 25/10/2022 à 29/12/2022</H1>
-    <H1>10/01/2023</H1>
+    <h4>Inscrições: 25/10/2022 à 29/12/2022</h4>
+    <h4>10/01/2023</h4>
     <p>(até as 15 horas)</p>
 
     <h2>Classificação em Processo Seletivo – Vestibular. 
