--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA03/Palindromo.html" target="_blank" target="_blank">Aula 03 - Exercicio Palindromo</a></li>
             <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA04/Array/Array.html" target="_blank" target="_blank">Aula 04 - Exercicio Array</a></li>
             <li><a href="https://giovannayumii.github.io/LabEngSoftware/AULA04/letreiro.html" target="_blank" target="_blank">Aula 05 - Exercicio Letreiro</a></li>
+            <li><a href="https://giovannayumii.github.io/LabEngSoftware/REACT_AULA01/Letreiro/letreiro.html" target="_blank" target="_blank">Aula 06 - Exercicio Letreiro REACT</a></li>
+            <li><a href="https://giovannayumii.github.io/LabEngSoftware/REACT_AULA01/Vestibular/vestibular.html" target="_blank" target="_blank">Aula 06 - Exercicio Vestibular REACT</a></li>
         </ul>
     </div>
 </body>
